5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4062/executions/1728_2496.log
== TEST (2019-05-08 18:51:06) 
-- CODE:
soma=0
cont=0

a=int(input("digite o numero: "))
while(a!=-1)
	soma= soma+num
	cont=cont+1
	num=int(input("digite o numero: "))
if(cont>0):
	print(soma)

-- ERROR:
File "XXXX", line 5
    while(a!=-1)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 18:51:12) 
-- CODE:
soma=0
cont=0

a=int(input("digite o numero: "))
while(a!=-1):
	soma= soma+num
	cont=cont+1
	num=int(input("digite o numero: "))
if(cont>0):
	print(soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    soma= soma+num
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 18:51:36) 
-- CODE:
soma=0
cont=0

a=int(input("digite o numero: "))
while(a!=-1):
	soma= soma+a
	cont=cont+1
	a=int(input("digite o numero: "))
if(cont>0):
	print(soma)

-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 18:51:54) 
-- CODE:
soma=0
cont=0

a=int(input("digite o numero: "))
while(a!=-1):
	soma= soma+a
	cont=cont+1
	a=int(input("digite o numero: "))
if(cont>0):
	print(soma)

-- EXECUTION TIME:
0.162865
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 19:03:11) 
-- CODE:
soma=0
cont=0
a=int(input("numero: "))
while(a!=-1):
	soma=cont+a
	cont=soma+a
	int(input("numero: "))
if(int(input("numero: ")))
-- ERROR:
File "XXXX", line 8
    if(int(input()))
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 19:03:18) 
-- CODE:
soma=0
cont=0
a=int(input("numero: "))
while(a!=-1):
	soma=cont+a
	cont=soma+a
	int(input("numero: "))
if(int(input("numero: ")):
-- ERROR:
File "XXXX", line 8
    if(int(input()):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 19:05:41) 
-- CODE:
soma=0
cont=0
a=int(input("numero: "))
while(a!=-1):
	soma=cont+a
	cont=soma+1
	b=int(input("numero: "))
if(cont>0):
	print(soma)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    b=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 19:06:04) 
-- CODE:
soma=0
cont=0
a=int(input("numero: "))
while(a!=-1):
	soma=cont+a
	cont=soma+1
	b=int(input("numero: "))
if(cont>0):
	print(soma)
	
-- EXECUTION TIME:
0.134398
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1728/2496/main.py", line 7, in <module>
    b=int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 19:06:47) 
-- CODE:
soma=0
cont=0
a=int(input("numero: "))
while(a!=-1):
	soma=cont+a
	cont=cont+1
	b=int(input("numero: "))
if(cont>0):
	print(soma)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    b=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 19:06:58) 
-- CODE:
soma=0
cont=0
a=int(input("numero: "))
while(a!=-1):
	soma=cont+a
	cont=cont+1
	b=int(input("numero: "))
if(cont>0):
	print(soma)
	
-- EXECUTION TIME:
0.118417
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1728/2496/main.py", line 7, in <module>
    b=int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 19:07:18) 
-- CODE:
soma=0
cont=0
a=int(input("numero: "))
while(a!=-1):
	soma=cont+a
	cont=cont+1
	num=int(input("numero: "))
if(cont>0):
	print(round(soma))
	
-- EXECUTION TIME:
0.19216
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1728/2496/main.py", line 7, in <module>
    num=int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 19:07:39) 
-- CODE:
soma=0
cont=0
a=int(input("numero: "))
while(a!=-1):
	soma=cont+a
	cont=cont+1
	a=int(input("numero: "))
if(cont>0):
	print(soma)
	
-- OUTPUT:
-6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 19:07:55) 
-- CODE:
soma=0
cont=0
a=int(input("numero: "))
while(a!=-1):
	soma=cont+a
	cont=cont+1
	a=int(input("numero: "))
if(cont>0):
	print(soma)
	
-- EXECUTION TIME:
0.170474
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-6
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
6
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
-10951
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 19:08:20) 
-- CODE:
soma=0
cont=0
a=int(input("numero: "))
while(a!=-1):
	soma=soma+a
	cont=cont+1
	a=int(input("numero: "))
if(cont>0):
	print(soma)

-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 19:08:30) 
-- CODE:
soma=0
cont=0
a=int(input("numero: "))
while(a!=-1):
	soma=soma+a
	cont=cont+1
	a=int(input("numero: "))
if(cont>0):
	print(soma)

-- EXECUTION TIME:
0.127236
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 19:13:00) 
-- CODE:
soma=0
cont=0
num=int(inputO"numero: ")
while(num!=-1):
	soma=soma+num
	cont=cont+1
	num=int(input("numero: "))
if(num>0):
	print(soma)
-- ERROR:
File "XXXX", line 3
    num=int(inputO"numero: ")
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 19:13:13) 
-- CODE:
soma=0
cont=0
num=int(input("numero: "))
while(num!=-1):
	soma=soma+num
	cont=cont+1
	num=int(input("numero: "))
if(num>0):
	print(soma)
-- ERROR:
File "XXXX", line 3
    num=int(inputO"numero: ")
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 19:13:25) 
-- CODE:
soma=0
cont=0
num=int(input("numero: "))
while(num!=-1):
	soma=soma+num
	cont=cont+1
	num=int(input("numero: "))
if(num>0):
	print(soma)
-- ERROR:
File "XXXX", line 3
    num=int(inputO"numero: ")
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 19:13:34) 
-- CODE:
soma=0
cont=0
num=int(input("numero: "))
while(num!=-1):
	soma=soma+num
	cont=cont+1
	num=int(input("numero: "))
if(num>0):
	print(soma)
-- EXECUTION TIME:
0.147316
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:

-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 19:14:01) 
-- CODE:
soma=0
cont=0
num=int(input("numero: "))
while(num!=-1):
	soma=soma+num
	cont=cont+1
	num=int(input("numero: "))
if(cont>0):
	print(soma)

-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 19:14:11) 
-- CODE:
soma=0
cont=0
num=int(input("numero: "))
while(num!=-1):
	soma=soma+num
	cont=cont+1
	num=int(input("numero: "))
if(cont>0):
	print(soma)

-- EXECUTION TIME:
0.16447
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
